Add availability query and logic